# Ad_Classification

./: .gitignore  README.md  convert_to_coreml.py  data_collection.sh  log.txt  performances.csv  pyproject.toml  save_to_pt.py  script.ipynb  script.py
data_processing/: ad_queries.txt  data_augmentation.py  data_collection.sh  hockey_queries.txt  hockey_queries2.txt  image_editor.py  log.txt  main.py  metadata.csv  metadata_dataframe.py  openverse.py  preprocessing.py  synthetic_data.py
data_processing/queries/: ad_queries.txt  baseball_queries.txt  baseball_queries2.txt  baseball_queries3.txt  baseball_queries4.txt  basketball_queries.txt  basketball_queries2.txt  basketball_queries3.txt  basketball_queries4.txt  football_queries.txt  football_queries2.txt  football_queries3.txt  football_queries4.txt  hockey_queries.txt  hockey_queries2.txt  synthetic_ad_queries.txt
data_processing/tests/: test_preprocessing.py
mac_inference/: .env  inference.py  inference.sh  mac_inference.py  mac_inference.sh  models.py  readme.md
modeling/: Augment.py  CNN.py  Callbacks.py  Configurator.py  Metrics.py  ModelInitializer.py  ModelInitializerFactory.py  PerformanceTrackers.py  SimpleCNN.py  Trainer.py  best_hyperparameters.txt  main.py  models.py  performance_tracker.py  performances.csv  preprocessing.py  run_gridsearch.py  run_model.py  simple_cnn_checkpoint.pth  train_best_model.py  utils.py
modeling/architectures/: GhostNet.py  MobileNet.py  ShuffleNet.py  (+2 more)
pi_inference/: inference.py  models.py  readme.md
raspberry_pi_advertisement/: .env  classify_script.sh  inference.py  pyproject.toml  readme.md  simple_cnn_checkpoint.pth
tests/: test_augmentation.py  test_preprocessing.py
wandb/: latest-run
(+84 files in other folders)
